--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.slider:library:1.1.5@aar'
     compile 'com.android.support:cardview-v7:25.1.1'
+    compile 'com.roomorama:caldroid:3.0.1'
 
 
     testCompile 'junit:junit:4.12'
