--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -38,8 +38,23 @@
             android:name=".Parent.ParentLoginPage"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".Parent.ShowSlideImage" />
-        <activity android:name=".Parent.AttendanceSummary"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" ></activity>
+        <activity
+            android:name=".Parent.AttendanceSummary"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".Parent.Homework"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".Parent.RemarkActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+
+        <activity android:name=".Parent.FeesActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:screenOrientation="landscape"/>
+
+        <activity android:name=".Parent.CircularActivity" />
+
+        <activity android:name=".Parent.ExamsActivity"></activity>
     </application>
 
 </manifest>
